--- a/epayment.html
+++ b/epayment.html
@@ -19,16 +19,12 @@
     <section class="fitur section">
         <div class="fitur__container container grid">
             <div class="fitur__data">
-                <h1 class="fitur__title">E-Payment</h1>
-                <p class="fitur__deskripsi">Kamu tipe orang yang suka pakai E-Wallet?
-                    Sekarang lebih mudah membayar menggunakan E-Payment. Akan tersedia banyak pilihan E-Wallet.</p>
+                <h1 class="fitur__title">Filtering Nilai</h1>
+                <p class="fitur__deskripsi">OTWPintar menyediakan fitur filtering nilai yang dapat membantu pengguna mengetahui bidang yang mendominasi kemampuan para pengguna. Filtering nilai ini juga dibersamai dengan fitur rekomemdasi kategori perlombaan, pengguna dapat berkontribusi dalam perlombaan yang diminati sehingga tidak hanya pintar, namun juga aktif dalam mengikuti ajang perlombaan yang selalu tersedia di OTWPintar.</p>
                     <a href="index.html#fitur" class="button__back">
                         <i class="ri-arrow-left-line back__icon"></i>
                         Kembali
                     </a>
-            </div>
-            <div>
-                <img src="assets/img/epayment.png" alt="" class="fitur__img">
             </div>
         </div>
     </section>
