--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2>Rekomendasi Perlombaan</h2>
                 <br>
                 <p>Pengguna dapat berkontribusi dalam perlombaan yang diminati sehingga tidak hanya pintar, namun juga aktif dalam mengikuti ajang perlombaan yang selalu tersedia di OtwPintar.</p>
-                <a href="epayment.html" class="button__card button-link">Selengkapnya
+                <a href="#" class="button__card button-link">Selengkapnya
                     <i class="ri-arrow-right-line card__icon"></i>
                 </a>
             </div>
@@ -69,7 +69,7 @@
                 <h2>Donasi</h2>
                 <br>
                 <p>Kami juga membuka wadah untuk berdonasi yang ditujukan kepada teman teman yang berada pada lingkungan pembelajaran yang kurang mendukung. Donasi ini akan dibuka untuk semua orang peduli yang mampu memberikan bantuan kepada teman teman yang tidak memiliki kesempatan berpendidikan dengan layak.</p>
-                <a href="epayment.html" class="button__card button-link">Selengkapnya
+                <a href="#" class="button__card button-link">Selengkapnya
                     <i class="ri-arrow-right-line card__icon"></i>
                 </a>
             </div>
@@ -77,7 +77,7 @@
                 <h2>Search Soal Dengan Foto</h2>
                 <br>
                 <p>Terkadang pengguna mendapat soal yang susah, dan untuk mecari jawaban mereka juga kesusahan. Oleh karena itu kamu menyediakan fitur mencari jawaban dengan cara memfoto soal.</p>
-                <a href="epayment.html" class="button__card button-link">Selengkapnya
+                <a href="#" class="button__card button-link">Selengkapnya
                     <i class="ri-arrow-right-line card__icon"></i>
                 </a>
             </div>
