--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2>Rekomendasi Perlombaan</h2>
                 <br>
                 <p>Pengguna dapat berkontribusi dalam perlombaan yang diminati sehingga tidak hanya pintar, namun juga aktif dalam mengikuti ajang perlombaan yang selalu tersedia di OtwPintar.</p>
-                <a href="#" class="button__card button-link">Selengkapnya
+                <a href="rekomendasi.html" class="button__card button-link">Selengkapnya
                     <i class="ri-arrow-right-line card__icon"></i>
                 </a>
             </div>
