--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
         <h1 class="section__title manfaat__title">Apa Manfaat OTWPintar</h1>
         <div class="manfaat__container">
             <div class="manfaat__content">
-                <img src="assets/Ellipse 49.png" alt="" class="manfaat__img">
+                <img src="assets/Group 295.png" alt="" class="manfaat__img">
                 <h3 class="manfaat__content-title">Tanpa Kemiskinan</h3>
                 <p class="manfaat__content-deskripsi">Donasi bisa mengurangi angka kemiskinan</p>
             </div>
             <div class="manfaat__content">
-                <img src="assets/Ellipse 49.png" alt="" class="manfaat__img">
+                <img src="assets/Group 294.png" alt="" class="manfaat__img">
                 <h3 class="manfaat__content-title">Kualitas Pendidikan</h3>
                 <p class="manfaat__content-deskripsi">Kualitas pendidikan yang lebih baik dengan OTWPintar</p>
             </div>
             <div class="manfaat__content">
-                <img src="assets/Ellipse 49.png" alt="" class="manfaat__img">
+                <img src="assets/Group 293.png" alt="" class="manfaat__img">
                 <h3 class="manfaat__content-title">Pekerjaan Layak & Pertumbuhan Ekonomi</h3>
                 <p class="manfaat__content-deskripsi">Secara tidak langsung OTWPintar membuka lapangan pekerjaan baru.</p>
             </div>
