--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav__items">
                 <ul class="nav">
                     <li><a href="#home" class="menu__link">Beranda</a></li>
-                    <li><a href="#fitur" class="menu__link">Fitur</a></li>
+                    <li><a href="#fitur" class="menu__link">fitur</a></li>
                     <li><a href="#manfaat" class="menu__link">Manfaat</a></li>
                     <li><a href="https://www.figma.com/proto/iIkMyKqF5wLFHWCiQhE7tQ/Demo-Day?page-id=0%3A1&node-id=23%3A1698&viewport=243%2C296%2C0.13&scaling=scale-down&starting-point-node-id=112%3A4121" target="_blank" rel="noopener noreferrer"><input type="button" value="Lihat Prototype" class="btn-primary"></a></li>
                 </ul>
