--- a/index.html
+++ b/index.html
@@ -114,11 +114,37 @@
 
 <!-- FOOTER -->
 
-<div class="footer">
-    <footer>
-        <p></p>
-    </footer>
-</div>
+<footer class="footer">
+    <div class="footer__container grid">
+        <div class="logo">
+            <img src="assets/Logo.png" alt="" class="logo__OTWPintar">
+        </div>
+        <div class="footer__link">
+            <ul class="footer__list">
+                <li class="footer__item">
+                    <a href="" class="footer__copy-link">Beranda</a>
+                </li>
+                <li class="footer__item">
+                    <a href="" class="footer__copy-link">Fitur</a>
+                </li>
+                <li class="footer__item">
+                    <a href="" class="footer__copy-link">Manfaat</a>
+                </li>
+                <li class="footer__item">
+                    <a href="" class="footer__copy-link">Tentang</a>
+                </li>
+                <li class="footer__item">
+                    <a href="https://www.figma.com/proto/iIkMyKqF5wLFHWCiQhE7tQ/Demo-Day?page-id=0%3A1&node-id=23%3A1698&viewport=243%2C296%2C0.13&scaling=scale-down&starting-point-node-id=112%3A4121" target="_blank" class="footer__copy-link">Prototype</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__copy">
+            <a href="https://instagram.com/siwarung" target="_blank" class="footer__copy-link">
+                &#169; Copyright all received by Kelompok 2
+            </a>
+        </div>
+    </div>
+</footer>
 
 <!-- AKHIR FOOTER -->
 
