--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </ul>
         </div>
         <div class="footer__copy">
-            <a href="#" target="_blank" class="footer__copy-link">
+            <a href="#" class="footer__copy-link">
                 &#169; Copyright all received by Kelompok 2
             </a>
         </div>
